# Diabetes-Prediction-Model

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  templates.py
artifacts/: model.pkl
artifacts/transformed_data/: X_test.csv  preprocessor.pkl  y_test.csv  y_train.csv
model_evaluation_report/: model_performance_report_20250517_002949.json
notebook/: research.ipynb
src/ml_model/: exception.py  logger.py  utils.py
src/ml_model/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/ml_model/pipelines/: prediction_pipeline.py
templates/: home.html  model_evaluation.html  predict.html
