[project]
name = "diabetes-prediction-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=44.0.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "imblearn>=0.0",
    "mysql-connector-python>=9.3.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pymysql>=1.1.1",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.41",
    "xgboost>=3.0.1",
]
